--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -203,6 +203,7 @@ ul {
 			line-height: 1.5;
 			border-radius: 3px;
 			background: $color-black;
+			overfolow-x: scroll;
 			code {
 				color: $color-code;
 				background: none;
